src/style.css
/* CSS Custom Properties Definitions */

:root {
  --maxWidth-none: "none";
  --maxWidth-xs: 20rem;
  --maxWidth-sm: 24rem;
  --maxWidth-md: 28rem;
  --maxWidth-lg: 32rem;
  --maxWidth-xl: 36rem;
  --maxWidth-2xl: 42rem;
  --maxWidth-3xl: 48rem;
  --maxWidth-4xl: 56rem;
  --maxWidth-full: "100%";
  --maxWidth-wrapper: var(--maxWidth-2xl);
  --spacing-px: "1px";
  --spacing-0: 0;
  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-8: 2rem;
  --spacing-10: 2.5rem;
  --spacing-12: 3rem;
  --spacing-16: 4rem;
  --spacing-20: 5rem;
  --spacing-24: 6rem;
  --spacing-32: 8rem;
  --fontFamily-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
  --fontFamily-serif: sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
  --font-body: var(--fontFamily-serif);
  --font-heading: var(--fontFamily-sans);
  --fontWeight-normal: 400;
  --fontWeight-medium: 500;
  --fontWeight-semibold: 600;
  --fontWeight-bold: 700;
  --fontWeight-extrabold: 800;
  --fontWeight-black: 900;
  --fontSize-root: 18px;
  --lineHeight-none: 1;
  --lineHeight-tight: 1.1;
  --lineHeight-normal: 1.5;
  --lineHeight-relaxed: 1.625;
  --fontSize-0: 0.837rem; /* 1.03^(-6) */
  --fontSize-1: 1rem;     /* 1.03^0    */
  --fontSize-2: 1.030rem; /* 1.03^1    */
  --fontSize-3: 1.092rem; /* 1.03^3    */
  --fontSize-4: 1.194rem; /* 1.03^6    */
  --fontSize-5: 1.343rem; /* 1.03^10   */
  --fontSize-6: 1.557rem; /* 1.03^15   */
  --fontSize-7: 1.860rem; /* 1.03^21   */
  --color-primary: #005b99;
  --color-text: #2e353f;
  --color-text-light: #4f5969;
  --color-heading: #1a202c;
  --color-heading-black: black;
  --color-accent: #d1dce5;
  --color-background: #fafafa;
}

/* HTML elements */

*,
:after,
:before {
  box-sizing: border-box;
}

html {
  line-height: var(--lineHeight-normal);
  font-size: var(--fontSize-root);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  font-family: var(--font-body);
  font-size: var(--fontSize-1);
  color: var(--color-text);
  background: var(--color-background);
  overflow-wrap: break-word;
}

footer {
  padding: var(--spacing-6) var(--spacing-0);
  text-align: center;
}

footer small {
  margin-bottom: var(--spacing-0);
  font-size: var(--fontSize-0);
}

hr {
  background: var(--color-accent);
  height: 1px;
  border: 0;
}

/* Heading */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
  margin-bottom: var(--spacing-4);
  line-height: var(--lineHeight-tight);
  letter-spacing: -0.025em;
}

h1 {
  margin-top: var(--spacing-10);
}

h2,
h3,
h4 {
  margin-top: var(--spacing-8);
}

h5,
h6 {
  margin-top: var(--spacing-6);
}

h2,
h3,
h4,
h5,
h6 {
  color: var(--color-heading);
}

h2,
h3,
h4 {
  font-weight: var(--fontWeight-bold);
}

h5,
h6 {
  font-weight: var(--fontWeight-medium);
}

h1 {
  font-weight: var(--fontWeight-bold);
  font-size: var(--fontSize-7);
  color: var(--color-heading-extrabold);
}

h2 {
  font-size: var(--fontSize-6);
}

h3 {
  font-size: var(--fontSize-5);
}

h4 {
  font-size: var(--fontSize-4);
}

h5 {
  font-size: var(--fontSize-3);
}

h6 {
  font-size: var(--fontSize-2);
}

h1 > a {
  color: inherit;
  text-decoration: none;
}

h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  text-decoration: none;
  color: inherit;
}

/* Prose */

p {
  line-height: var(--lineHeight-relaxed);
  --baseline-multiplier: 0.179;
  --x-height-multiplier: 0.35;
  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
  padding: var(--spacing-0);
}

ul,
ol {
  margin: var(--spacing-4) var(--spacing-0);
  padding: var(--spacing-0);
  list-style-position: inside;
  list-style-image: none;
}

ul li,
ol li {
  padding-left: var(--spacing-0);
  margin-bottom: var(--spacing-1);
}

li > p {
  margin-bottom: var(--spacing-1);
}

/* AdHoc fix for https://github.com/gatsbyjs/gatsby/issues/10870 */
li > p {
  margin-top: calc(var(--spacing-6) * -1);
  margin-left: var(--spacing-6);
}

li *:last-child {
  margin-bottom: var(--spacing-0);
}

li > ul {
  margin-left: var(--spacing-4);
  margin-top: var(--spacing-1);
}

blockquote {
  color: var(--color-text-light);
  margin-left: calc(-1 * var(--spacing-6));
  margin-right: var(--spacing-4);
  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
  border-left: var(--spacing-1) solid var(--color-primary);
  font-size: var(--fontSize-1);
  font-style: italic;
  margin-bottom: var(--spacing-4);
}

blockquote > :last-child {
  margin-bottom: var(--spacing-0);
}

blockquote > ul,
blockquote > ol {
  list-style-position: inside;
}

table {
  width: 100%;
  margin-bottom: var(--spacing-4);
  border-collapse: collapse;
  border-spacing: 0.25rem;
}

table thead tr th {
  border-bottom: 1px solid var(--color-accent);
}

figcaption {
  margin: var(--spacing-1) var(--spacing-0);
  font-size: var(--fontSize-0);
  text-align: center;
  color: var(--color-text-light);
}

/* Link */

a {
  color: var(--color-primary);
}

a:hover,
a:focus {
  text-decoration: none;
}

/* Custom classes */

.gatsby-resp-image-figure {
  margin: var(--spacing-6) var(--spacing-0);
}

.global-wrapper {
  margin: var(--spacing-0) auto;
  max-width: var(--maxWidth-wrapper);
  padding: var(--spacing-6) var(--spacing-5);
}

.global-header {
  margin-bottom: var(--spacing-10);
  display: flex;
}

.global-header .logo {
  --logo-avatar-length: 32px;

  height: var(--logo-avatar-length);
  text-decoration: none;
}

.global-header .logo-avatar {
  height: var(--logo-avatar-length);
  width: var(--logo-avatar-length);
  margin-right: var(--spacing-1);
}

.global-header .logo-text {
  font-family: var(--font-heading);
  font-weight: var(--fontWeight-bold);
  font-size: var(--fontSize-1);
  color: var(--color-heading);
  display: inline;
  letter-spacing: -0.025em;
  margin: var(--spacing-0);
  vertical-align: 8px;
}

.tab {
  text-align: center;
  margin: var(--spacing-8) auto;
}

.tab li {
  margin: 0 var(--spacing-4);
  display: inline-block;
}

.tab a {
  font-weight: var(--fontWeight-bold);
  font-size: var(--fontSize-1);
  text-decoration: none;
  color: var(--color-heading);
  letter-spacing: -0.025em;
}

.tab a:hover {
  border-bottom: 2px solid var(--color-heading);
}

.tab a[aria-selected="true"] {
  border-bottom: 2px solid var(--color-heading);
}

.post-list-item {
  margin-bottom: var(--spacing-6);
  margin-top: var(--spacing-6);
}

.post-list-item h2 {
  font-size: var(--fontSize-4);
  color: var(--color-primary);
  margin-bottom: var(--spacing-0);
  margin-top: var(--spacing-0);
}

.bio {
  margin-bottom: var(--spacing-4);
  text-align: center;
}

.bio p {
  margin-bottom: var(--spacing-0);
}

.bio-text-app-icon {
  margin-left: calc(var(--spacing-1) / 2);
  margin-right: var(--spacing-1);
  vertical-align: middle;
  height: var(--fontSize-5);
  border-radius: 0.2237em;
}

a:hover .bio-text-app-icon {
  opacity: 0.6;
}

.blog-post {
  margin-bottom: var(--spacing-16);
}

.blog-post header h1 {
  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
}

.blog-post header p {
  font-size: var(--fontSize-2);
  font-family: var(--font-heading);
}

.blog-post-nav ul {
  margin: var(--spacing-2) var(--spacing-0);
}

.blog-post-nav ul a {
  margin-left: var(--spacing-1);
}

.blog-post-nav li {
  margin: var(--spacing-2) var(--spacing-0);
  list-style: none;
}

.gatsby-highlight {
  margin-bottom: var(--spacing-4);
}

/* Media queries */

@media (max-width: 42rem) {
  blockquote {
    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
    margin-left: var(--spacing-0);
  }
}

/* Contacts */

.contacts {
  display: block;
  margin: var(--spacing-6) auto;
  text-align: center;
}

.contacts a {
  width: 26px;
  height: 26px;
  margin: 0 var(--spacing-4);
  display: inline-block;
  transition: opacity 200ms ease;
}

.contacts a:hover {
  opacity: 0.6;
}

